--- a/src/css/todo_style.css
+++ b/src/css/todo_style.css
@@ -38,3 +38,91 @@ div.banner {
 .home_new_list_button:hover {
   box-shadow: 1px 2px;
 }
+
+/* LIST SCREEN CONTROLS */
+#list_heading {
+  font-size: 36pt;
+  cursor: pointer;
+}
+#list_heading:hover {
+  color: var(--swatch-accent);
+}
+#list_details_container {}
+#list_details_name_container {}
+#list_name_prompt, #list_owner_prompt {
+  font-size: 14pt;
+}
+#list_name_textfield, #list_owner_textfield {
+  font-size: 14pt;
+}
+#list_details_owner_container {}
+#list_trash {
+  font-size: 40pt;
+}
+#list_trash:hover {
+  color: var(--swatch-accent);
+  cursor: pointer;
+}
+#list_items_container {}
+
+/* LIST SCREEN CLASSES */
+.list_item_card, .list_item_add_card {
+  background-color: var(--swatch-neutral);
+}
+.list_item_card:hover, .list_item_add_card:hover {
+  background-color: var(--swatch-complement);
+}
+.list_item_add_card {
+  font-weight: bold;
+  font-size: 24pt;
+}
+.list_item_add_card:hover {
+  color: var(--swatch-bright-accent);
+}
+.list_item_header_card {
+  background-color: var(--swatch-accent);
+}
+.list_item_task_header, .list_item_due_date_header, .list_item_status_header {
+  font-weight: bold;
+  font-size: 24pt;
+}
+.list_item_task_header:hover, .list_item_due_date_header:hover, .list_item_status_header:hover {
+  color: var(--swatch-primary);
+}
+.list_item_task_header {}
+.list_item_due_date_header {}
+.list_item_status_header {}
+.list_item_card_description {
+  font-weight: bold;
+  font-size: 14pt;
+}
+.list_item_card_assigned_to, .list_item_card_due_date, 
+.list_item_card_completed, .list_item_card_not_completed {
+  font-weight: normal;
+  font-size: 12pt;
+}
+.list_item_card_assigned_to {}
+.list_item_card_due_date {}
+.list_item_card_completed {
+  color: green;
+}
+.list_item_card_not_completed {
+  color: red;
+}
+.list_item_card_toolbar {}
+.list_item_card_button {
+  background-color: var(--swatch-accent);
+  color: var(--swatch-neutral);
+  font-size: 24pt;
+  font-weight: bold;
+}
+.list_item_card_button:hover {
+  color: var(--swatch-complement);
+  cursor: default;
+}
+.disabled {
+  background-color: lightgray;
+}
+.disabled:hover {
+  color: var(--swatch-neutral);
+}
